# ATM-Sample-in-C

./: CMakeLists.txt  Makefile  README.md  main.c
inc/: atm.h
src/: Menu.c  balance.c  deposit.c  error.c  exit.c  withdraw.c
